--- a/1 - triangle-orientacao-objeto/.project
+++ b/1 - triangle-orientacao-objeto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-employee</name>
+	<name>1 - triangle-orientacao-objeto</name>
 	<comment></comment>
 	<projects>
 	</projects>
