--- a/2 - rectangle-orientacao-objeto/.project
+++ b/2 - rectangle-orientacao-objeto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-static-member-dolar</name>
+	<name>2 - rectangle-orientacao-objeto</name>
 	<comment></comment>
 	<projects>
 	</projects>
