--- a/4 - employee-orientacao-objeto/.project
+++ b/4 - employee-orientacao-objeto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-notas</name>
+	<name>4 - employee-orientacao-objeto</name>
 	<comment></comment>
 	<projects>
 	</projects>
