--- a/6 - static-member-test/.project
+++ b/6 - static-member-test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-ex-1-accountDeposit</name>
+	<name>6 - static-member-test</name>
 	<comment></comment>
 	<projects>
 	</projects>
