--- a/7 - static-member-dolar/.project
+++ b/7 - static-member-dolar/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-ex-2-bhaskara</name>
+	<name>7 - static-member-dolar</name>
 	<comment></comment>
 	<projects>
 	</projects>
