--- a/8 - product-using-constructor/.project
+++ b/8 - product-using-constructor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-product</name>
+	<name>8 - product-using-constructor</name>
 	<comment></comment>
 	<projects>
 	</projects>
