--- a/10 - ex-2-bhaskara/.project
+++ b/10 - ex-2-bhaskara/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-rectangle</name>
+	<name>10 - ex-2-bhaskara</name>
 	<comment></comment>
 	<projects>
 	</projects>
