--- a/3 - product-orientacao-objeto/.project
+++ b/3 - product-orientacao-objeto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-static-member</name>
+	<name>3 - product-orientacao-objeto</name>
 	<comment></comment>
 	<projects>
 	</projects>
