--- a/5 - notas-orientacao-objeto/.project
+++ b/5 - notas-orientacao-objeto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course-product-using-constructor</name>
+	<name>5 - notas-orientacao-objeto</name>
 	<comment></comment>
 	<projects>
 	</projects>
