--- a/9 - ex-1-accountDeposit(sobrecarga)/.project
+++ b/9 - ex-1-accountDeposit(sobrecarga)/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>course</name>
+	<name>9 - ex-1-accountDeposit(sobrecarga)</name>
 	<comment></comment>
 	<projects>
 	</projects>
